test/fail/classes/invalid_self_return.lly
#[
SyntaxError: 'self' return type only allowed on class methods.
    from invalid_self_return.lly:6
]#

define f: self {}
